[package]
name = "heshbon-nefesh"
version = "0.1.0"
description = "A personal encrypted journal"
authors = ["You"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.8", features = ["api-all", "devtools"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# מסד נתונים - מוגדר bundled כדי שלא תצטרך התקנות צד שלישי
rusqlite = { version = "0.29", features = ["bundled"] }

# הצפנה
aes-gcm = "0.10.3"
argon2 = "0.5.3"
rand = "0.8.5"

[features]
custom-protocol = ["tauri/custom-protocol"]
